force-app/main/default/objects/Product2/fields/Best_Seller_In_and_Out__c.field-meta.xml
<CustomField>
    <fullName>Best_Seller_In_and_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Best Seller In and Out</label>
    <type>Checkbox</type>
</CustomField>