force-app/main/default/objects/Product2/fields/C_digo_base_SIN_MARCA__c.field-meta.xml
<CustomField>
    <fullName>C_digo_base_SIN_MARCA__c</fullName>
    <formula>LEFT( CodigoDeProductoBase__c , 7)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código base (SIN MARCA)</label>
    <type>Text</type>
</CustomField>