force-app/main/default/objects/Product2/fields/CajaAltoCm__c.field-meta.xml
<CustomField>
    <fullName>CajaAltoCm__c</fullName>
    <label>Caja (alto cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>