force-app/main/default/objects/Product2/fields/CajaAnchoCm__c.field-meta.xml
<CustomField>
    <fullName>CajaAnchoCm__c</fullName>
    <label>Caja (ancho cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>