force-app/main/default/objects/Product2/fields/CBM_Total__c.field-meta.xml
<CustomField>
    <fullName>CBM_Total__c</fullName>
    <description>Suma del CBM (m3) de las 6 masterbox del producto. Reemplaza a MasterboxM3_2__c, que solo tomaba la Masterbox 1.</description>
    <formula>IF( RecordType.DeveloperName == &apos;Producto&apos;,
MasterboxM3__c + Masterbox2M3__c + Masterbox3M3__c + Masterbox4M3__c + Masterbox5M3__c + Masterbox6M3__c,
IF(RecordType.DeveloperName == &apos;ProductoDeFabrica&apos;,
ProductoBase__r.MasterboxM3__c + ProductoBase__r.Masterbox2M3__c + ProductoBase__r.Masterbox3M3__c + ProductoBase__r.Masterbox4M3__c + ProductoBase__r.Masterbox5M3__c + ProductoBase__r.Masterbox6M3__c,
ProductoDeFabrica__r.ProductoBase__r.MasterboxM3__c + ProductoDeFabrica__r.ProductoBase__r.Masterbox2M3__c + ProductoDeFabrica__r.ProductoBase__r.Masterbox3M3__c + ProductoDeFabrica__r.ProductoBase__r.Masterbox4M3__c + ProductoDeFabrica__r.ProductoBase__r.Masterbox5M3__c + ProductoDeFabrica__r.ProductoBase__r.Masterbox6M3__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CBM Total</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>