force-app/main/default/objects/Product2/fields/Clasificacion_producto__c.field-meta.xml
<CustomField>
    <fullName>Clasificacion_producto__c</fullName>
    <label>Clasificación de productos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BASIC</fullName>
                <default>true</default>
                <label>BASIC</label>
            </value>
            <value>
                <fullName>PREMIUM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>