force-app/main/default/objects/Product2/fields/Codigo_Anterior2__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Anterior2__c</fullName>
    <formula>IF ( RecordType.Name = &quot;2-Producto de Fábrica&quot; ,
ProductoBase__r.Codigo_Anterior__c ,
IF ( RecordType.Name = &quot;3-Opción de Packaging&quot; ,
ProductoDeFabrica__r.ProductoBase__r.Codigo_Anterior__c ,
Codigo_Anterior__c
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código Anterior</label>
    <type>Text</type>
</CustomField>