force-app/main/default/objects/Product2/fields/Codigo_Anterior__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Anterior__c</fullName>
    <label>Código Anterior</label>
    <length>9</length>
    <type>Text</type>
</CustomField>