force-app/main/default/objects/Product2/fields/Codigo_DUN_14__c.field-meta.xml
<CustomField>
    <fullName>Codigo_DUN_14__c</fullName>
    <label>Código DUN 14</label>
    <length>20</length>
    <type>Text</type>
</CustomField>