force-app/main/default/objects/Product2/fields/Codigo_EAN2__c.field-meta.xml
<CustomField>
    <fullName>Codigo_EAN2__c</fullName>
    <formula>IF(RecordType.DeveloperName = &apos;Producto&apos;, 
Codigo_EAN__c, 
IF(RecordType.DeveloperName = &apos;ProductoDeFabrica&apos;, 
ProductoBase__r.Codigo_EAN__c, 
ProductoDeFabrica__r.ProductoBase__r.Codigo_EAN__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código EAN</label>
    <type>Text</type>
</CustomField>