force-app/main/default/objects/Product2/fields/Codigo_EAN__c.field-meta.xml
<CustomField>
    <fullName>Codigo_EAN__c</fullName>
    <label>Código EAN</label>
    <length>13</length>
    <type>Text</type>
</CustomField>