force-app/main/default/objects/Product2/fields/Codigo_Proveedor2__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Proveedor2__c</fullName>
    <formula>IF(RecordType.DeveloperName = &apos;Producto&apos;, 
&apos;&apos;, 
IF(RecordType.DeveloperName = &apos;ProductoDeFabrica&apos;, 
Codigo_Proveedor__c, 
ProductoDeFabrica__r.Codigo_Proveedor__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código Proveedor</label>
    <type>Text</type>
</CustomField>