force-app/main/default/objects/Product2/fields/Codigo_Proveedor__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Proveedor__c</fullName>
    <label>Código Proveedor</label>
    <length>120</length>
    <type>Text</type>
</CustomField>