force-app/main/default/objects/Product2/fields/CodigoArancelario__c.field-meta.xml
<CustomField>
    <fullName>CodigoArancelario__c</fullName>
    <label>Código arancelario</label>
    <length>25</length>
    <type>Text</type>
</CustomField>