force-app/main/default/objects/Product2/fields/CodigoDeProductoBase__c.field-meta.xml
<CustomField>
    <fullName>CodigoDeProductoBase__c</fullName>
    <formula>IF ( RecordType.Name = &quot;2-Producto de Fábrica&quot; ,
ProductoBase__r.ProductCode ,
IF ( RecordType.Name = &quot;3-Opción de Packaging&quot; ,
ProductoDeFabrica__r.ProductoBase__r.ProductCode ,
ProductCode
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código de producto base (**)</label>
    <type>Text</type>
</CustomField>