force-app/main/default/objects/Product2/fields/CodigoDeProductoInterno__c.field-meta.xml
<CustomField>
    <fullName>CodigoDeProductoInterno__c</fullName>
    <formula>IF ( RecordType.Name = &quot;1-Producto&quot; , 
ProductCode 
&amp; &quot;[&quot; 
&amp; LEFT ( TEXT ( Marca__c ) , 1 ) 
&amp; LEFT ( TEXT ( Packaging__c ) , 1 ) 
&amp; &quot;]&quot; , 
IF ( RecordType.Name = &quot;2-Producto de Fábrica&quot; , 
ProductoBase__r.ProductCode
&amp; &quot;[&quot; 
&amp; LEFT ( TEXT ( ProductoBase__r.Marca__c ) , 1 ) 
&amp; LEFT ( TEXT ( Packaging__c ) , 1 ) 
&amp; &quot;]&quot; , 
IF ( RecordType.Name = &quot;3-Opción de Packaging&quot; ,
ProductoDeFabrica__r.ProductoBase__r.ProductCode
&amp; &quot;[&quot; 
&amp; LEFT ( TEXT ( ProductoDeFabrica__r.ProductoBase__r.Marca__c ) , 1 ) 
&amp; LEFT ( TEXT ( Packaging__c ) , 1 ) 
&amp; &quot;]&quot; , 
NULL 
) 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código de producto interno (**)</label>
    <type>Text</type>
</CustomField>