force-app/main/default/objects/Product2/fields/Color2__c.field-meta.xml
<CustomField>
    <fullName>Color2__c</fullName>
    <formula>IF(RecordType.DeveloperName = &apos;Producto&apos;, 
Color__c, 
IF(RecordType.DeveloperName = &apos;ProductoDeFabrica&apos;, 
ProductoBase__r.Color__c, 
ProductoDeFabrica__r.ProductoBase__r.Color__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Color</label>
    <type>Text</type>
</CustomField>