force-app/main/default/objects/Product2/fields/ComposicionEnPorcentaje__c.field-meta.xml
<CustomField>
    <fullName>ComposicionEnPorcentaje__c</fullName>
    <label>Composición en %</label>
    <length>255</length>
    <type>Text</type>
</CustomField>