force-app/main/default/objects/Product2/fields/CostoDeFabricaHijo__c.field-meta.xml
<CustomField>
    <fullName>CostoDeFabricaHijo__c</fullName>
    <formula>IF ( RecordType.Name &lt;&gt; &quot;Producto&quot; ,
ProductoDeFabrica__r.PrecioDeFabrica__c ,
null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costo Fábrica</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>