force-app/main/default/objects/Product2/fields/CostoEscandallo__c.field-meta.xml
<CustomField>
    <fullName>CostoEscandallo__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Costo escandallo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>