force-app/main/default/objects/Product2/fields/CostoImportacionUnidad__c.field-meta.xml
<CustomField>
    <fullName>CostoImportacionUnidad__c</fullName>
    <formula>IF ( RecordType.DeveloperName == &quot;Producto&quot;,
CostoEscandallo__c,
IF ( RecordType.DeveloperName == &quot;ProductoDeFabrica&quot;,
ProductoBase__r.CostoEscandallo__c,
ProductoDeFabrica__r.ProductoBase__r.CostoEscandallo__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costo Extra Unidad</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>