force-app/main/default/objects/Product2/fields/CostoTotal2__c.field-meta.xml
<CustomField>
    <fullName>CostoTotal2__c</fullName>
    <formula>IF ( RecordType.DeveloperName == &quot;ProductoDeFabrica&quot; , 
PrecioDeFabrica__c + CostoImportacionUnidad__c + CostoPackaging__c, 
ProductoDeFabrica__r.PrecioDeFabrica__c + CostoImportacionUnidad__c + CostoPackaging__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costo Origen Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>