force-app/main/default/objects/Product2/fields/CreadoPorOrigen__c.field-meta.xml
<CustomField>
    <fullName>CreadoPorOrigen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Creado por (origen)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Productos</relationshipName>
    <type>Lookup</type>
</CustomField>