force-app/main/default/objects/Product2/fields/Descripcion_Larga__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Larga__c</fullName>
    <formula>Name + &apos; &apos; + Color2__c + &apos; &apos; + Medidas_del_Producto_Agrupadas2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descripción Larga</label>
    <type>Text</type>
</CustomField>