force-app/main/default/objects/Product2/fields/Estado_verificacion_costo__c.field-meta.xml
<CustomField>
    <fullName>Estado_verificacion_costo__c</fullName>
    <label>Estado verificación costo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En Proceso</fullName>
            </value>
            <value>
                <fullName>Verificado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>