force-app/main/default/objects/Product2/fields/Estatus__c.field-meta.xml
<CustomField>
    <fullName>Estatus__c</fullName>
    <formula>IF(IsActive,
   IF(TEXT($User.LanguageLocaleKey) = &quot;en_US&quot;, &quot;Primary&quot;, &quot;Principal&quot;),
   IF(TEXT($User.LanguageLocaleKey) = &quot;en_US&quot;, &quot;Alternative&quot;, &quot;Alternativa&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estatus</label>
    <type>Text</type>
</CustomField>