force-app/main/default/objects/Product2/fields/Fabrica__c.field-meta.xml
<CustomField>
    <fullName>Fabrica__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fábrica</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>La cuenta de proveedor no existe o no es una fábrica.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Proveedor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Productos de la fábrica</relationshipLabel>
    <relationshipName>ProductosDeLaFabrica</relationshipName>
    <type>Lookup</type>
</CustomField>