force-app/main/default/objects/Product2/fields/Familia_producto_base__c.field-meta.xml
<CustomField>
    <fullName>Familia_producto_base__c</fullName>
    <formula>TEXT ( ProductoBase__r.Family )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Familia producto base</label>
    <type>Text</type>
</CustomField>