force-app/main/default/objects/Product2/fields/Fecha_revision_costo__c.field-meta.xml
<CustomField>
    <fullName>Fecha_revision_costo__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Fecha en la que se hizo la última revision del costo a este producto</description>
    <label>Fecha última revision costo</label>
    <type>Date</type>
</CustomField>