force-app/main/default/objects/Product2/fields/FechaDeCreacionOrigen__c.field-meta.xml
<CustomField>
    <fullName>FechaDeCreacionOrigen__c</fullName>
    <label>Fecha de creación (origen)</label>
    <type>DateTime</type>
</CustomField>