force-app/main/default/objects/Product2/fields/Feria__c.field-meta.xml
<CustomField>
    <fullName>Feria__c</fullName>
    <formula>IF(ISBLANK(Prospecto_de_Fabrica__c),
&apos;N/A&apos;,
 TEXT(Prospecto_de_Fabrica__r.Feria__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Feria</label>
    <type>Text</type>
</CustomField>