force-app/main/default/objects/Product2/fields/G_W_del__c.field-meta.xml
<CustomField>
    <fullName>G_W_del__c</fullName>
    <label>Producto (G.W.)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>