force-app/main/default/objects/Product2/fields/Garantia__c.field-meta.xml
<CustomField>
    <fullName>Garantia__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Garantía</label>
    <type>Checkbox</type>
</CustomField>