force-app/main/default/objects/Product2/fields/IDImagen1__c.field-meta.xml
<CustomField>
    <fullName>IDImagen1__c</fullName>
    <label>ID Imagen 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>