force-app/main/default/objects/Product2/fields/IDImagen2__c.field-meta.xml
<CustomField>
    <fullName>IDImagen2__c</fullName>
    <label>ID Imagen 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>