force-app/main/default/objects/Product2/fields/IDImagen3__c.field-meta.xml
<CustomField>
    <fullName>IDImagen3__c</fullName>
    <label>ID Imagen 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>