force-app/main/default/objects/Product2/fields/IdOrigen__c.field-meta.xml
<CustomField>
    <fullName>IdOrigen__c</fullName>
    <externalId>true</externalId>
    <label>Id (origen)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>