force-app/main/default/objects/Product2/fields/image_upladed_s3_result__c.field-meta.xml
<CustomField>
    <fullName>image_upladed_s3_result__c</fullName>
    <description>describes load result</description>
    <label>image upladed s3 result</label>
    <length>10</length>
    <type>Text</type>
</CustomField>