force-app/main/default/objects/Product2/fields/image_uploaded_s3__c.field-meta.xml
<CustomField>
    <fullName>image_uploaded_s3__c</fullName>
    <defaultValue>false</defaultValue>
    <description>field used in massive image loading from salesforce to aws s3</description>
    <label>image uploaded s3</label>
    <type>Checkbox</type>
</CustomField>