force-app/main/default/objects/Product2/fields/Imagen1__c.field-meta.xml
<CustomField>
    <fullName>Imagen1__c</fullName>
    <formula>IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos; + 
  IF(OR(RecordType.DeveloperName == &apos;Producto&apos;,
        RecordType.DeveloperName == &apos;Prospecto_de_Producto&apos;)
            &amp;&amp; NOT(ISBLANK(IDImagen1__c)),
    IDImagen1__c,
    IF(RecordType.DeveloperName == &apos;ProductoDeFabrica&apos; &amp;&amp; NOT(ISBLANK(ProductoBase__r.IDImagen1__c)),
    ProductoBase__r.IDImagen1__c,
    IF(NOT(ISBLANK(ProductoDeFabrica__r.ProductoBase__r.IDImagen1__c)),
    ProductoDeFabrica__r.ProductoBase__r.IDImagen1__c,
    &apos;0154w0000242U1s&apos;)))
, Name , 150, 150)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Imagen 1</label>
    <type>Text</type>
</CustomField>