force-app/main/default/objects/Product2/fields/Imagen3__c.field-meta.xml
<CustomField>
    <fullName>Imagen3__c</fullName>
    <formula>IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos; + 
IF( OR(RecordType.DeveloperName == &apos;Producto&apos;,
        RecordType.DeveloperName == &apos;Prospecto_de_Producto&apos;)
            &amp;&amp; NOT(ISBLANK(IDImagen3__c)), 
IDImagen3__c, 
IF(RecordType.DeveloperName == &apos;ProductoDeFabrica&apos; &amp;&amp; NOT(ISBLANK(ProductoBase__r.IDImagen3__c)), 
ProductoBase__r.IDImagen3__c, 
IF(NOT(ISBLANK(ProductoDeFabrica__r.ProductoBase__r.IDImagen3__c)), 
ProductoDeFabrica__r.ProductoBase__r.IDImagen3__c, 
&apos;0154w0000242U1s&apos;))) 
, Name , 150, 150)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Imagen 3</label>
    <type>Text</type>
</CustomField>