force-app/main/default/objects/Product2/fields/Item_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Item_Cliente__c</fullName>
    <inlineHelpText>Internal customer reference code</inlineHelpText>
    <label>Item # Cliente</label>
    <type>TextArea</type>
</CustomField>