force-app/main/default/objects/Product2/fields/M3Unidad__c.field-meta.xml
<CustomField>
    <fullName>M3Unidad__c</fullName>
    <label>M3 unidad</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>