force-app/main/default/objects/Product2/fields/ManualDeInstrucciones__c.field-meta.xml
<CustomField>
    <fullName>ManualDeInstrucciones__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual de instrucciones</label>
    <type>Checkbox</type>
</CustomField>