force-app/main/default/objects/Product2/fields/Marca2__c.field-meta.xml
<CustomField>
    <fullName>Marca2__c</fullName>
    <formula>IF(RecordType.DeveloperName = &apos;Producto&apos;,
TEXT(Marca__c),
IF(RecordType.DeveloperName = &apos;ProductoDeFabrica&apos;,
TEXT(ProductoBase__r.Marca__c),
TEXT(ProductoDeFabrica__r.ProductoBase__r.Marca__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marca</label>
    <type>Text</type>
</CustomField>