force-app/main/default/objects/Product2/fields/Marca__c.field-meta.xml
<CustomField>
    <fullName>Marca__c</fullName>
    <label>Marca_base</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A-!DEA Garden</fullName>
            </value>
            <value>
                <fullName>AR-ARO (MAKRO ARGENTINA)</fullName>
            </value>
            <value>
                <fullName>B-!DEA Home</fullName>
            </value>
            <value>
                <fullName>C-!DEA Heating &amp; Fan</fullName>
            </value>
            <value>
                <fullName>D-DO BRANDS</fullName>
            </value>
            <value>
                <fullName>E-MEMBERS CHOICE (CITY CLUB)</fullName>
            </value>
            <value>
                <fullName>F-ALLURE (DO BRANDS CITY CLUB)</fullName>
            </value>
            <value>
                <fullName>G-B2COOL (DO BRANDS - CITY CLUB)</fullName>
            </value>
            <value>
                <fullName>H-OUTDOOR TREND (SORIANA)</fullName>
            </value>
            <value>
                <fullName>HE-HEUMAN BRAND (LIVERPOOL)</fullName>
            </value>
            <value>
                <fullName>HL-HOME LINE (CHEDRAUI)</fullName>
            </value>
            <value>
                <fullName>I-HOMESTYLE DESIGN (SORIANA)</fullName>
            </value>
            <value>
                <fullName>J-ROOTS (CENCOSUD)</fullName>
            </value>
            <value>
                <fullName>K-BSAFE (AFALPI)</fullName>
            </value>
            <value>
                <fullName>KE-KERRVILLE (HEB)</fullName>
            </value>
            <value>
                <fullName>KO-KOVA (KOVA FURNITURE)</fullName>
            </value>
            <value>
                <fullName>L-LIVING ACCENTS (ACE)</fullName>
            </value>
            <value>
                <fullName>M-MEMBERS MARK (SAMS)</fullName>
            </value>
            <value>
                <fullName>N-TALA 18 (AFALPI)</fullName>
            </value>
            <value>
                <fullName>O-KREA (CENCOSUD)</fullName>
            </value>
            <value>
                <fullName>OS-OUTDOOR SOLUTIONS (HEB)</fullName>
            </value>
            <value>
                <fullName>P-CLARK GARDEN (HOMESENTRY)</fullName>
            </value>
            <value>
                <fullName>Q-SUNABLE (SAMS)</fullName>
            </value>
            <value>
                <fullName>R-CARREFOUR HOME (CARREFOUR)</fullName>
            </value>
            <value>
                <fullName>S-RED DOT (CASA LEY)</fullName>
            </value>
            <value>
                <fullName>ST-STUK (OFFICE MAX)</fullName>
                <default>true</default>
                <label>ST-STUK (OFFICE MAX)</label>
            </value>
            <value>
                <fullName>T-MAHAIA (LA COMER)</fullName>
            </value>
            <value>
                <fullName>U-MASTER CRAFT (SORIANA)</fullName>
            </value>
            <value>
                <fullName>V-VARIOS ESPECIALES</fullName>
            </value>
            <value>
                <fullName>VI-VIOS (SORIANA)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>