force-app/main/default/objects/Product2/fields/MarcaItemDeFactura__c.field-meta.xml
<CustomField>
    <fullName>MarcaItemDeFactura__c</fullName>
    <description>MID ( TEXT ( Marca__c ) ,
3 ,
LEN ( TEXT ( Marca__c ) )
)</description>
    <formula>MID ( TEXT ( Marca__c ) , FIND ( &quot;-&quot; , TEXT ( Marca__c ) ) + 1 , LEN ( TEXT ( Marca__c ) ) - FIND ( &quot;-&quot; , TEXT ( Marca__c ) ) + 1 )</formula>
    <label>Marca ítem de factura</label>
    <type>Text</type>
</CustomField>