force-app/main/default/objects/Product2/fields/Masterbox1_detalle__c.field-meta.xml
<CustomField>
    <fullName>Masterbox1_detalle__c</fullName>
    <label>Master Box 1 Descripcion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>