force-app/main/default/objects/Product2/fields/Masterbox2_detalle__c.field-meta.xml
<CustomField>
    <fullName>Masterbox2_detalle__c</fullName>
    <label>Master Box 2 Descripcion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>