force-app/main/default/objects/Product2/fields/Masterbox2AltoCm__c.field-meta.xml
<CustomField>
    <fullName>Masterbox2AltoCm__c</fullName>
    <label>Master Box 2 (alto cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>