force-app/main/default/objects/Product2/fields/Masterbox2AnchoCm__c.field-meta.xml
<CustomField>
    <fullName>Masterbox2AnchoCm__c</fullName>
    <label>Master Box 2 (ancho cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>