force-app/main/default/objects/Product2/fields/Masterbox2LargoCm__c.field-meta.xml
<CustomField>
    <fullName>Masterbox2LargoCm__c</fullName>
    <label>Master Box 2 (largo cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>