force-app/main/default/objects/Product2/fields/Masterbox2PesoKg__c.field-meta.xml
<CustomField>
    <fullName>Masterbox2PesoKg__c</fullName>
    <label>Master Box 2 (G.W.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>