force-app/main/default/objects/Product2/fields/Masterbox3_detalle__c.field-meta.xml
<CustomField>
    <fullName>Masterbox3_detalle__c</fullName>
    <label>Master Box 3 Descripcion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>