force-app/main/default/objects/Product2/fields/Masterbox3AltoCm__c.field-meta.xml
<CustomField>
    <fullName>Masterbox3AltoCm__c</fullName>
    <label>Master Box 3 (alto cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>