force-app/main/default/objects/Product2/fields/Masterbox3AnchoCm__c.field-meta.xml
<CustomField>
    <fullName>Masterbox3AnchoCm__c</fullName>
    <label>Master Box 3 (ancho cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>