force-app/main/default/objects/Product2/fields/Masterbox3LargoCm__c.field-meta.xml
<CustomField>
    <fullName>Masterbox3LargoCm__c</fullName>
    <label>Master Box 3 (largo cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>