force-app/main/default/objects/Product2/fields/Masterbox3M3__c.field-meta.xml
<CustomField>
    <fullName>Masterbox3M3__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Master Box 3 (CBM)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>