force-app/main/default/objects/Product2/fields/Masterbox3PesoKg__c.field-meta.xml
<CustomField>
    <fullName>Masterbox3PesoKg__c</fullName>
    <label>Master Box 3 (G.W.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>