force-app/main/default/objects/Product2/fields/Masterbox4AltoCm__c.field-meta.xml
<CustomField>
    <fullName>Masterbox4AltoCm__c</fullName>
    <label>Master Box 4 (alto cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>