force-app/main/default/objects/Product2/fields/Masterbox4AnchoCm__c.field-meta.xml
<CustomField>
    <fullName>Masterbox4AnchoCm__c</fullName>
    <label>Master Box 4 (ancho cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>