force-app/main/default/objects/Product2/fields/Masterbox4LargoCm__c.field-meta.xml
<CustomField>
    <fullName>Masterbox4LargoCm__c</fullName>
    <label>Master Box 4 (largo cm)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>