force-app/main/default/objects/Product2/fields/Masterbox4PesoKg__c.field-meta.xml
<CustomField>
    <fullName>Masterbox4PesoKg__c</fullName>
    <label>Master Box 4 (peso kg)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>