force-app/main/default/objects/Product2/fields/MasterboxM3_2__c.field-meta.xml
<CustomField>
    <fullName>MasterboxM3_2__c</fullName>
    <description>Repuntado 2026-08-16: antes solo devolvia el CBM de la Masterbox 1 (via MasterboxM3__c). Ahora delega en CBM_Total__c, que suma las 6 masterbox. Se mantiene el nombre del campo para no romper OpportunityLineItem.Total_CBM__c ni ContainerAddItems.cls, que ya lo consumen.</description>
    <formula>CBM_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MasterboxM3_2</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>