force-app/main/default/objects/Product2/fields/Material_Alteryx__c.field-meta.xml
<CustomField>
    <fullName>Material_Alteryx__c</fullName>
    <description>Unificación Materiales para cruce de datos con Alteryx</description>
    <label>Material Alteryx</label>
    <length>255</length>
    <type>Text</type>
</CustomField>